Finilizing design - Renamed the introduction section to about me - Changed tooltips and emojis in the navbar - Added project components, will begin working on them now

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="Elias' Simple and Sleek Portfolio where you can find all his projects and more information about him!"
     />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
 
