--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,94 @@
     />
 
     <link rel="icon" type="image/png" href="/favicon.ico" />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
+    <link
+      rel="preload"
+      href="/global.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="/global.css" />
+    </noscript>
+
+    <link
+      rel="preload"
+      href="/build/bundle.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="/build/bundle.css" />
+    </noscript>
 
     <script defer src="/build/bundle.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <style>
+      .loading-screen {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: linear-gradient(to bottom left, #1f1f1f, #1a1a1a);
+        z-index: 99999;
+      }
+      .loader {
+        border: 0.7rem solid #ffffff5b;
+        border-top: 0.7rem solid #ffffff;
+
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        animation: spin 2s linear infinite;
+      }
+      .finished-loading {
+        animation: fade 0.5s ease forwards;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes fade {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+          pointer-events: none;
+        }
+      }
+    </style>
   </head>
 
-  <body></body>
+  <body>
+    <div class="loading-screen">
+      <div class="loader"></div>
+    </div>
+  </body>
+
+  <script>
+    if (Math.floor(Math.random() * 2) == 1) {
+      document.getElementsByClassName("loader")[0].style.borderBottom =
+        "0.7rem solid #ffffff";
+    }
+
+    window.addEventListener("load", () => {
+      document
+        .getElementsByClassName("loading-screen")[0]
+        .classList.add("finished-loading");
+
+      // setTimeout(() => {
+      //   document.getElementsByClassName("loading-screen")[0].remove();
+      // }, 1000);
+    });
+  </script>
 </html>
