Finalizing website - Installed the static-adapter for svelte - Added old versions of portfolio - Changed favicon - Added metadata for website information - Disabled prerendering

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+    <title>Elias' Portfolio</title>
+    <meta name="theme-color" content="#007cc7" />
+		<meta name="description" content="Elias' Portfolio" />
 
 		<style>
       html {
