--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		%sveltekit.head%
     <title>Elias' Portfolio</title>
     <meta name="theme-color" content="#007cc7" />
-		<meta name="description" content="Elias' Portfolio" />
+		<!-- <meta name="description" content="Elias' Portfolio" /> -->
     <meta name="google-site-verification" content="P57V9lJZGctM2dhmk7bC9Ia2arFD5lJhPphBrN11Kuk" />
 
 		<style>
