--- a/src/app.html
+++ b/src/app.html
@@ -1,86 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width" />
+    %sveltekit.head%
     <title>Elias' Portfolio</title>
     <meta name="theme-color" content="#007cc7" />
-		<!-- <meta name="description" content="Elias' Portfolio" /> -->
+    <!-- <meta name="description" content="Elias' Portfolio" /> -->
     <meta name="google-site-verification" content="P57V9lJZGctM2dhmk7bC9Ia2arFD5lJhPphBrN11Kuk" />
-
-		<style>
-      html {
-        overflow-y: hidden;
-      }
-
-      .loading-screen {
-        position: fixed;
-        inset: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: linear-gradient(to bottom left, #1f1f1f, #1a1a1a);
-        z-index: 99999;
-      }
-      .loader {
-        border: 0.7rem solid #ffffff5b;
-        border-top: 0.7rem solid #ffffff;
-
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        animation: spin 2s linear infinite;
-      }
-      .finished-loading {
-        animation: fade 0.5s ease forwards;
-      }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-
-      @keyframes fade {
-        from {
-          opacity: 1;
-        }
-        to {
-          opacity: 0;
-          pointer-events: none;
-        }
-      }
-    </style>
   </head>
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-				<div class="loading-screen">
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+    <!-- <div class="loading-screen">
       <div class="loader"></div>
-    </div>
-	</body>
-
-	<script>
-    if (Math.floor(Math.random() * 2) == 1) {
-      document.getElementsByClassName("loader")[0].style.borderBottom =
-        "0.7rem solid #ffffff";
-    }
-
-    window.addEventListener("load", () => {
-      document
-        .getElementsByClassName("loading-screen")[0]
-        .classList.add("finished-loading");
-
-      document.getElementsByTagName("html")[0].style.overflowY = "auto";
-
-      // setTimeout(() => {
-      //   document.getElementsByClassName("loading-screen")[0].remove();
-      // }, 1000);
-    });
-  </script>
+    </div> -->
+  </body>
 </html>
