--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,11 @@
     <meta name="theme-color" content="#007cc7" />
     <!-- <meta name="description" content="Elias' Portfolio" /> -->
     <meta name="google-site-verification" content="P57V9lJZGctM2dhmk7bC9Ia2arFD5lJhPphBrN11Kuk" />
+
+    <meta
+      name="description"
+      content="Elias' Portfolio, you can find all about him here and check out his past and current projects!"
+    />
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
