Portfolio v4.1 - Updated all packages - Updated discord logo - Added navbar - Merged AboutMe section with MainHeader (now Main) - Removed NextSection button

--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="P57V9lJZGctM2dhmk7bC9Ia2arFD5lJhPphBrN11Kuk" />
 
-    <title>Elias' Portfolio</title>
+    <title>Elias Valk - Portfolio</title>
+    <meta
+      name="description"
+      content="You can find all about me, my projects and where to find me here!"
+    />
+    <meta
+      name="keywords"
+      content="seo, webdev, website, programmer, developer, portfolio, elias, elias valk, eliasvalk"
+    />
+    <meta name="color-scheme" content="light" />
+
     <meta name="theme-color" content="#007cc7" />
     <meta name="title" content="Elias' Portfolio" />
     <meta
       name="description"
-      content="You can find all about him here and check out his past and current projects!"
+      content="You can find all about me, my projects and where to find me here!"
     />
 
     <!-- Open Graph / Facebook -->
@@ -20,7 +30,7 @@
     <meta property="og:title" content="Elias' Portfolio" />
     <meta
       property="og:description"
-      content="You can find all about him here and check out his past and current projects!"
+      content="You can find all about me, my projects and where to find me here!"
     />
 
     <!-- Twitter -->
@@ -29,7 +39,7 @@
     <meta property="twitter:title" content="Elias' Portfolio" />
     <meta
       property="twitter:description"
-      content="You can find all about him here and check out his past and current projects!"
+      content="You can find all about me, my projects and where to find me here!"
     />
   </head>
 
