--- a/src/app.html
+++ b/src/app.html
@@ -1,38 +1,52 @@
 <!doctype html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="google-site-verification" content="P57V9lJZGctM2dhmk7bC9Ia2arFD5lJhPphBrN11Kuk" />
+		<title>Elias Valk - Portfolio</title>
 
-	<title>Elias Valk - Portfolio</title>
-	<meta name="description" content="You can find all about me, my projects and where to find me here!" />
-	<meta name="keywords"
-		content="seo, webdev, website, programmer, developer, portfolio, elias, elias valk, eliasvalk" />
-	<meta name="color-scheme" content="light" />
+		<meta name="google-site-verification" content="P57V9lJZGctM2dhmk7bC9Ia2arFD5lJhPphBrN11Kuk" />
 
-	<meta name="theme-color" content="#007cc7" />
-	<meta name="title" content="Elias' Portfolio" />
-	<meta name="description" content="You can find all about me, my projects and where to find me here!" />
+		<meta
+			name="description"
+			content="You can find all about me, my projects and where to find me here!"
+		/>
+		<meta
+			name="keywords"
+			content="seo, webdev, website, programmer, developer, portfolio, elias, elias valk, eliasvalk"
+		/>
+		<meta name="color-scheme" content="light" />
 
-	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://eliasval.github.io/" />
-	<meta property="og:title" content="Elias' Portfolio" />
-	<meta property="og:description" content="You can find all about me, my projects and where to find me here!" />
+		<meta name="theme-color" content="#007cc7" />
+		<meta name="title" content="Elias' Portfolio" />
+		<meta
+			name="description"
+			content="You can find all about me, my projects and where to find me here!"
+		/>
 
-	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:url" content="https://eliasval.github.io/" />
-	<meta property="twitter:title" content="Elias' Portfolio" />
-	<meta property="twitter:description" content="You can find all about me, my projects and where to find me here!" />
-	%sveltekit.head%
-</head>
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://eliasval.github.io/" />
+		<meta property="og:title" content="Elias' Portfolio" />
+		<meta
+			property="og:description"
+			content="You can find all about me, my projects and where to find me here!"
+		/>
 
-<body data-sveltekit-preload-data="hover">
-	<div style="display: contents">%sveltekit.body%</div>
-</body>
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://eliasval.github.io/" />
+		<meta property="twitter:title" content="Elias' Portfolio" />
+		<meta
+			property="twitter:description"
+			content="You can find all about me, my projects and where to find me here!"
+		/>
+		%sveltekit.head%
+	</head>
 
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
+	</body>
 </html>
