--- a/src/app.html
+++ b/src/app.html
@@ -30,10 +30,15 @@
 			}
 
 			body,
+			html,
+			button {
+				font-family: 'Rubik', sans-serif;
+			}
+
+			body,
 			html {
 				overflow-x: hidden;
 				background-color: rgb(32, 32, 32);
-				font-family: 'Rubik', sans-serif;
 			}
 
 			body::before {
